--- a/codebase/Application/Home/Epsilon/About/index.html
+++ b/codebase/Application/Home/Epsilon/About/index.html
@@ -9,13 +9,13 @@
 	<section class="about-us-banner-section">
 		<div class="about-us-inner-section">
 			<div class="about-banner-image"
-				style="background-image:url(__EPSILON__/img/redesign/about/about-us-banner-background-image.png)">
+				style="background-image:url(__EPSILON__/img/redesign/about/hero_bg_dark.png)">
 				<div class="container">
 					<div class="banner-inner-boxes">
 						<div class="banner-top-section">
 							<div class="index_titleBox__5j_B3">
 								<div class="about-headings">{:SHORT_NAME}</div>
-								<p>The World’s First Social Infused Exchange
+								<p>The Gold Standard in Cryptocurrency Trading
 							</div>
 						</div>
 					</div>
@@ -64,7 +64,7 @@
 	<section class="Business-scope-section">
 		<div class="Business-scope-inner-section">
 			<div class="Business-scope-image Desktop_view"
-				style="background-image:url(__EPSILON__/img/redesign/about/Business-scope-banner.png)">
+				style="background-image:url(__EPSILON__/img/redesign/about/global_coverage_business_scope_dark.png)">
 				<div class="container">
 					<div class="index_titleAll__e7b9e">
 						<div><span style="color: #ffbe40"> Global coverage </span> business scope</div>
@@ -78,7 +78,7 @@
 			</div>
 
 			<div class="Business-scope-image Mobile_view"
-				style="background-image:url(__EPSILON__/img/redesign/about/Business-scope-banner-mobile.png)">
+				style="background-image:url(__EPSILON__/img/redesign/about/global_coverage_business_scope_dark_mob.png)">
 				<div class="container">
 					<div class="index_titleAll__e7b9e">
 						<div><span style="color: #ffbe40"> Global coverage </span> business scope</div>
@@ -100,12 +100,12 @@
 		color: black;
 	}
 	#light .Business-scope-section .Business-scope-image {
-		background-image: url(/Public/template/epsilon/img/redesign/about/world_msp.png) !important;
-		background-size: cover;
+		background-image: url(/Public/template/epsilon/img/redesign/about/global_coverage_business_scope_light.png) !important;
+		background-position: bottom;
 		background-color: white;
 	}
 	#light .about-banner-image {
-		background-image: url(/Public/template/epsilon/img/redesign/about/earthv.jpg) !important;
+		background-image: url(/Public/template/epsilon/img/redesign/about/hero_bg_light.png) !important;
 		background-color: white;
 	}
 	#light .banner-top-section .index_titleBox__5j_B3 .about-headings, #light .banner-top-section .index_titleBox__5j_B3 p, #light .banner-mid-section .index_desBOX__4OhqS, #light .Business-scope-section .index_desBOX__qYef9 {
@@ -114,15 +114,12 @@
 	#light .banner-bottom-section .index_top__XL9xj {
 		color: #fcc968;
 	}
-	#light .banner-bottom-section{
-		bottom: 18px;
-	}
 	#light .index_bottom__e0gEN {
 		font-weight: bold;
 		color: black;
 	}
 	.about-banner-image {
-		min-height: 1020px;
+		min-height: 800px;
 		position: relative;
 		clear: both;
 		overflow: hidden;
@@ -143,7 +140,7 @@
 		text-align: center;
 		color: #fff;
 		line-height: 70px;
-		margin: 170px 0 auto;
+		margin: 100px 0 auto;
 	}
 
 	.banner-top-section .index_titleBox__5j_B3 p {
@@ -307,7 +304,7 @@
 	}
 
 	.Business-scope-section .index_titleAll__e7b9e {
-		padding-top: 120px;
+		padding-top: 28px;
 		font-size: 36px;
 		font-weight: 400;
 		color: #fff;
@@ -325,7 +322,7 @@
 	}
 
 	.Business-scope-section .Business-scope-image {
-		background: top no-repeat;
+		background: bottom no-repeat;
 		background-color: #000;
 		height: 800px;
 	}
@@ -1402,12 +1399,15 @@
 		}
 
 		.Business-scope-section .Business-scope-image {
-			height: 580px;
-			background-position: right;
+			height: 400px;
+			background-position: bottom;
 		}
 
 		.Business-scope-section .index_desBOX__qYef9 {
 			margin-top: 12px;
+		}
+		#light .Business-scope-section .Business-scope-image.Mobile_view{
+			background-image: url(/Public/template/epsilon/img/redesign/about/global_coverage_business_scope_light_mob.png) !important;
 		}
 	}
 
