--- a/codebase/Application/Home/Epsilon/Index/home_blog_box.html
+++ b/codebase/Application/Home/Epsilon/Index/home_blog_box.html
@@ -16,7 +16,7 @@
                         <div class="card-body">
                             <!--div class="blog-categorie"><span>Bitcoin</span><span>News</span></div-->
                             <h4 class="card-title">{$vo['title']|msubstr=0,100}</h4>
-                            <p class="card-text">{$vo['content']|strip_tags|msubstr=0,100}</p>
+                            <!-- <p class="card-text">{$vo['content']|strip_tags|msubstr=0,100}</p> -->
                             <!--span class="date">{$vo.addtime|addtime}</span-->
                         </div>
                     </a>
