dynamic home small slider url

--- a/codebase/Application/Home/Epsilon/Index/home_small_sliders.html
+++ b/codebase/Application/Home/Epsilon/Index/home_small_sliders.html
@@ -7,7 +7,7 @@
 						<volist name="indexLink" id="vo">
                             
 								<div>
-						<a href="#"><img src="__UPLOAD__/link/{$vo['img']}" alt="{$vo['title']}" class="img-fluid m-auto"></a>
+						<a href="{$vo['url']}"><img src="__UPLOAD__/link/{$vo['img']}" alt="{$vo['title']}" class="img-fluid m-auto"></a>
 					</div>
 						</volist>
 				</div>
